quantity issue solved
